syntax = "proto3";

import "token.proto";

package vixen.parser.token_extensions;

// --------------------------
// TransferFee Extension
// --------------------------

message TransferCheckedWithFeeAccounts {
  string source = 1;
  string mint = 2;
  string destination = 3;
  string authority = 4;
  repeated string signers = 5;
}

message TransferCheckedWithFeeArgs {
  uint64 amount = 1;
  uint64 fee = 2;
  uint8 decimals = 3;
}

message TransferCheckedWithFee {
  TransferCheckedWithFeeAccounts accounts = 1;
  TransferCheckedWithFeeArgs args = 2;
}

message InitializeTransferFeeConfigAccounts { string mint = 1; }

message InitializeTransferFeeConfigArgs {
  optional string transfer_fee_config_authority = 1;
  optional string withdraw_withheld_authority = 2;
  uint16 transfer_fee_basis_points = 3;
  uint64 maximum_fee = 4;
}

message InitializeTransferFeeConfig {
  InitializeTransferFeeConfigAccounts accounts = 1;
  InitializeTransferFeeConfigArgs args = 2;
}

message WithdrawWithheldTokensFromMintAccounts {
  string mint = 1;
  string destination = 2;
  string authority = 3;
  repeated string signers = 4;
}

message WithdrawWithheldTokensFromMint {
  WithdrawWithheldTokensFromMintAccounts accounts = 1;
}

message WithdrawWithheldTokensFromAccountsAccounts {
  string mint = 1;
  string destination = 2;
  string authority = 3;
  repeated string sources = 4;
  repeated string signers = 5;
}

message WithdrawWithheldTokensFromAccountsArgs {
  uint64 num_token_accounts = 1;
}

message WithdrawWithheldTokensFromAccounts {
  WithdrawWithheldTokensFromAccountsAccounts accounts = 1;
  WithdrawWithheldTokensFromAccountsArgs args = 2;
}

message HarvestWithheldTokensToMintAccounts {
  string mint = 1;
  string authority = 2;
}

message HarvestWithheldTokensToMint {
  HarvestWithheldTokensToMintAccounts accounts = 1;
}

message SetTransferFeeAccounts {
  string mint = 1;
  string authority = 2;
  repeated string signers = 3;
}

message SetTransferFeeArgs {
  uint16 transfer_fee_basis_points = 1;
  uint64 maximum_fee = 2;
}

message SetTransferFee {
  SetTransferFeeAccounts accounts = 1;
  SetTransferFeeArgs args = 2;
}

message TransferFeeInstruction {
  oneof kind {
    TransferCheckedWithFee transfer_checked_with_fee = 1;
    InitializeTransferFeeConfig initialize_transfer_fee_config = 2;
    WithdrawWithheldTokensFromMint withdraw_withheld_from_mint = 3;
    WithdrawWithheldTokensFromAccounts withdraw_withheld_from_accounts = 4;
    HarvestWithheldTokensToMint harvest_withheld_to_mint = 5;
    SetTransferFee set_transfer_fee = 6;
  }
}

// --------------------------
// TokenMetadata Extension
// --------------------------

message InitializeTokenMetadataAccounts {
  string metadata = 1;
  string update_authority = 2;
  string mint = 3;
  string mint_authority = 4;
}

message InitializeTokenMetadataArgs {
  string name = 1;
  string symbol = 2;
  string uri = 3;
}

message InitializeTokenMetadata {
  InitializeTokenMetadataAccounts accounts = 1;
  InitializeTokenMetadataArgs args = 2;
}

message UpdateTokenMetadataFieldAccounts {
  string metadata = 1;
  string update_authority = 2;
}

message UpdateTokenMetadataFieldArgs {
  string key = 1;
  string value = 2;
}

message UpdateTokenMetadataField {
  UpdateTokenMetadataFieldAccounts accounts = 1;
  UpdateTokenMetadataFieldArgs args = 2;
}

message RemoveTokenMetadataKeyAccounts {
  string metadata = 1;
  string update_authority = 2;
}

message RemoveTokenMetadataKeyArgs {
  bool idempotent = 1;
  string key = 2;
}

message RemoveTokenMetadataKey {
  RemoveTokenMetadataKeyAccounts accounts = 1;
  RemoveTokenMetadataKeyArgs args = 2;
}

message UpdateTokenMetadataAuthorityAccounts {
  string metadata = 1;
  string current_update_authority = 2;
}

message UpdateTokenMetadataAuthorityArgs { string new_update_authority = 1; }

message UpdateTokenMetadataAuthority {
  UpdateTokenMetadataAuthorityAccounts accounts = 1;
  UpdateTokenMetadataAuthorityArgs args = 2;
}

message EmitTokenMetadataAccounts { string metadata = 1; }

message EmitTokenMetadataArgs {
  optional uint64 start = 1;
  optional uint64 end = 2;
}

message EmitTokenMetadata {
  EmitTokenMetadataAccounts accounts = 1;
  EmitTokenMetadataArgs args = 2;
}

message TokenMetadataInstruction {
  oneof kind {
    InitializeTokenMetadata initialize = 1;
    UpdateTokenMetadataField update_field = 2;
    RemoveTokenMetadataKey remove_key = 3;
    UpdateTokenMetadataAuthority update_authority = 4;
    EmitTokenMetadata emit = 5;
  }
}

// --------------------------
// TokenGroup Extension
// --------------------------

message InitializeTokenGroupAccounts {
  string group = 1;
  string mint = 2;
  string mint_authority = 3;
}

message InitializeTokenGroupArgs {
  optional string update_authority = 1;
  uint64 max_size = 2;
}

message InitializeTokenGroup {
  InitializeTokenGroupAccounts accounts = 1;
  InitializeTokenGroupArgs args = 2;
}

message UpdateTokenGroupMaxSizeAccounts {
  string group = 1;
  string authority = 2;
}

message UpdateTokenGroupMaxSizeArgs { uint64 max_size = 1; }

message UpdateTokenGroupMaxSize {
  UpdateTokenGroupMaxSizeAccounts accounts = 1;
  UpdateTokenGroupMaxSizeArgs args = 2;
}

message UpdateTokenGroupAuthorityAccounts {
  string group = 1;
  string current_authority = 2;
}

message UpdateTokenGroupAuthorityArgs { string new_authority = 1; }

message UpdateTokenGroupAuthority {
  UpdateTokenGroupAuthorityAccounts accounts = 1;
  UpdateTokenGroupAuthorityArgs args = 2;
}

message InitializeTokenGroupMemberAccounts {
  string group_member = 1;
  string member_mint = 2;
  string member_mint_authority = 3;
  string group = 4;
  string group_update_authority = 5;
}

message InitializeTokenGroupMember {
  InitializeTokenGroupMemberAccounts accounts = 1;
}

message TokenGroupInstruction {
  oneof instruction {
    InitializeTokenGroup initialize_group = 1;
    UpdateTokenGroupMaxSize update_group_max_size = 2;
    UpdateTokenGroupAuthority update_group_authority = 3;
    InitializeTokenGroupMember initialize_group_member = 4;
  }
}

// --------------------------
// ConfidentialTransfer Extension
// --------------------------

message InitializeConfidentialMintAccounts { string mint = 1; }
message InitializeConfidentialMint {
  InitializeConfidentialMintAccounts accounts = 1;
}

message UpdateConfidentialMintAuthorityAccounts {
  string mint = 1;
  string authority = 2;
}
message UpdateConfidentialMintAuthority {
  UpdateConfidentialMintAuthorityAccounts accounts = 1;
}

message ConfigureConfidentialAccountAccounts {
  string account = 1;
  string mint = 2;
  string sysvar = 3;
  string owner = 4;
  repeated string signers = 5;
}
message ConfigureConfidentialAccount {
  ConfigureConfidentialAccountAccounts accounts = 1;
}

message ApproveConfidentialAccountAccounts {
  string account = 1;
  string mint = 2;
  string authority = 3;
}
message ApproveConfidentialAccount {
  ApproveConfidentialAccountAccounts accounts = 1;
}

message EmptyConfidentialAccountAccounts {
  string account = 1;
  string sysvar = 2;
  string owner = 3;
  repeated string signers = 4;
}
message EmptyConfidentialAccount {
  EmptyConfidentialAccountAccounts accounts = 1;
}

message DepositConfidentialAccounts {
  string account = 1;
  string mint = 2;
  string owner = 3;
  repeated string signers = 4;
}
message DepositConfidential { DepositConfidentialAccounts accounts = 1; }

message WithdrawConfidentialAccounts {
  string source_account = 1;
  string mint = 2;
  string destination = 3;
  string owner = 4;
  repeated string signers = 5;
}
message WithdrawConfidential { WithdrawConfidentialAccounts accounts = 1; }

message TransferConfidentialAccounts {
  string source_account = 1;
  string mint = 2;
  string destination = 3;
  string owner = 4;
  string context_account = 5;
  repeated string signers = 6;
}
message TransferConfidential { TransferConfidentialAccounts accounts = 1; }

message ApplyPendingBalanceConfidentialAccounts {
  string account = 1;
  string owner = 2;
  repeated string signers = 3;
}
message ApplyPendingBalanceConfidential {
  ApplyPendingBalanceConfidentialAccounts accounts = 1;
}

message ConfidentialCreditsAccounts {
  string account = 1;
  string owner = 2;
  repeated string signers = 3;
}
message EnableConfidentialCredits { ConfidentialCreditsAccounts accounts = 1; }
message DisableConfidentialCredits { ConfidentialCreditsAccounts accounts = 1; }
message EnableNonConfidentialCredits {
  ConfidentialCreditsAccounts accounts = 1;
}
message DisableNonConfidentialCredits {
  ConfidentialCreditsAccounts accounts = 1;
}

message TransferConfidentialWithFeeAccounts {
  string source_account = 1;
  string mint = 2;
  string destination = 3;
}
message TransferConfidentialWithFee {
  TransferConfidentialWithFeeAccounts accounts = 1;
}

message ConfigureConfidentialAccountWithRegistryAccounts {
  string account = 1;
  string mint = 2;
  string registry = 3;
}
message ConfigureConfidentialAccountWithRegistry {
  ConfigureConfidentialAccountWithRegistryAccounts accounts = 1;
}

message ConfidentialTransferInstruction {
  oneof instruction {
    InitializeConfidentialMint initialize_mint = 1;
    UpdateConfidentialMintAuthority update_mint_authority = 2;
    ConfigureConfidentialAccount configure_account = 3;
    ApproveConfidentialAccount approve_account = 4;
    EmptyConfidentialAccount empty_account = 5;
    DepositConfidential deposit = 6;
    WithdrawConfidential withdraw = 7;
    TransferConfidential transfer = 8;
    ApplyPendingBalanceConfidential apply_pending_balance = 9;
    EnableConfidentialCredits enable_confidential_credits = 10;
    DisableConfidentialCredits disable_confidential_credits = 11;
    EnableNonConfidentialCredits enable_non_confidential_credits = 12;
    DisableNonConfidentialCredits disable_non_confidential_credits = 13;
    TransferConfidentialWithFee transfer_with_fee = 14;
    ConfigureConfidentialAccountWithRegistry configure_account_with_registry =
        15;
  }
}

// --------------------------
// ConfidentialTransferFee Extension
// --------------------------

message InitializeConfidentialTransferFeeConfigAccounts { string mint = 1; }
message InitializeConfidentialTransferFeeConfig {
  InitializeConfidentialTransferFeeConfigAccounts accounts = 1;
}

message ConfidentialWithdrawWithheldTokensFromMintAccounts {
  string mint = 1;
  string destination = 2;
  string sysvar = 3;
  string authority = 4;
  repeated string signers = 5;
}
message ConfidentialWithdrawWithheldTokensFromMint {
  ConfidentialWithdrawWithheldTokensFromMintAccounts accounts = 1;
}

message ConfidentialWithdrawWithheldTokensFromAccountsAccounts {
  string mint = 1;
  string destination = 2;
  string authority = 3;
  repeated string source_accounts = 4;
  repeated string signers = 5;
}
message ConfidentialWithdrawWithheldTokensFromAccounts {
  ConfidentialWithdrawWithheldTokensFromAccountsAccounts accounts = 1;
}

message ConfidentialHarvestWithheldTokensToMintAccounts {
  string mint = 1;
  repeated string source_accounts = 2;
}
message ConfidentialHarvestWithheldTokensToMint {
  ConfidentialHarvestWithheldTokensToMintAccounts accounts = 1;
}

message EnableHarvestToMintAccounts {
  string mint = 1;
  string authority = 2;
  repeated string signers = 3;
}
message DisableHarvestToMintAccounts {
  string account = 1;
  string authority = 2;
  repeated string signers = 3;
}
message EnableHarvestToMint { EnableHarvestToMintAccounts accounts = 1; }
message DisableHarvestToMint { DisableHarvestToMintAccounts accounts = 1; }

message ConfidentialTransferFeeInstruction {
  oneof instruction {
    InitializeConfidentialTransferFeeConfig
        initialize_confidential_transfer_fee_config = 1;
    ConfidentialWithdrawWithheldTokensFromMint withdraw_withheld_from_mint = 2;
    ConfidentialWithdrawWithheldTokensFromAccounts
        withdraw_withheld_from_accounts = 3;
    ConfidentialHarvestWithheldTokensToMint harvest_withheld_to_mint = 4;
    EnableHarvestToMint enable_harvest_to_mint = 5;
    DisableHarvestToMint disable_harvest_to_mint = 6;
  }
}

// --------------------------
// Common Extension Instructions
// --------------------------

message CommonExtensionInitializeAccounts { string mint = 1; }
message CommonExtensionInitialize {
  CommonExtensionInitializeAccounts accounts = 1;
}

message CommonExtensionUpdateAccounts {
  string mint = 1;
  string authority = 2;
  repeated string signers = 3;
}
message CommonExtensionUpdate { CommonExtensionUpdateAccounts accounts = 1; }

message CommonExtensionEnableAccounts {
  string account = 1;
  string owner = 2;
  repeated string signers = 3;
}
message CommonExtensionEnable { CommonExtensionEnableAccounts accounts = 1; }

message CommonExtensionDisableAccounts {
  string account = 1;
  string owner = 2;
  repeated string signers = 3;
}
message CommonExtensionDisable { CommonExtensionDisableAccounts accounts = 1; }

message CommonExtensionInstruction {
  oneof kind {
    CommonExtensionInitialize initialize = 1;
    CommonExtensionUpdate update = 2;
    CommonExtensionEnable enable = 3;
    CommonExtensionDisable disable = 4;
  }
}

enum ExtensionWithCommon {
  CPI_GUARD = 0;
  DEFAULT_ACCOUNT_STATE = 1;
  INTEREST_BEARING_MINT = 2;
  MEMO_TRANSFER = 3;
  GROUP_MEMBER_POINTER = 4;
  GROUP_POINTER = 5;
  METADATA_POINTER = 6;
  TRANSFER_HOOK = 7;
}
message CommonExtensions {
  ExtensionWithCommon extension = 1;
  CommonExtensionInstruction instruction = 2;
}

message CpiGuard { CommonExtensionInstruction instruction = 1; }
message DefaultAccountState { CommonExtensionInstruction instruction = 1; }
message InterestBearingMint { CommonExtensionInstruction instruction = 1; }
message MemoTransfer { CommonExtensionInstruction instruction = 1; }
message GroupMemberPointer { CommonExtensionInstruction instruction = 1; }
message GroupPointer { CommonExtensionInstruction instruction = 1; }
message MetadataPointer { CommonExtensionInstruction instruction = 1; }
message TransferHook { CommonExtensionInstruction instruction = 1; }

message WithdrawExcessLamportsAccounts {
  string source = 1;
  string destination = 2;
  string authority = 3;
  repeated string signers = 4;
}
message WithdrawExcessLamports { WithdrawExcessLamportsAccounts accounts = 1; }

message InitializePermanentDelegateAccounts { string account = 1; }
message InitializePermanentDelegateData { string delegate = 1; }
message InitializePermanentDelegate {
  InitializePermanentDelegateAccounts accounts = 1;
  InitializePermanentDelegateData data = 2;
}

message ReallocateAccounts {
  string account = 1;
  string payer = 2;
  string owner = 3;
  repeated string signers = 4;
}
enum ExtensionType {
  UNINITIALIZED_EXT = 0;
  TRANSFER_FEE_CONFIG_EXT = 1;
  TRANSFER_FEE_AMOUNT_EXT = 2;
  MINT_CLOSE_AUTHORITY_EXT = 3;
  CONFIDENTIAL_TRANSFER_MINT_EXT = 4;
  CONFIDENTIAL_TRANSFER_ACCOUNT_EXT = 5;
  DEFAULT_ACCOUNT_STATE_EXT = 6;
  IMMUTABLE_OWNER_EXT = 7;
  MEMO_TRANSFER_EXT = 8;
  NON_TRANSFERABLE_EXT = 9;
  INTEREST_BEARING_CONFIG_EXT = 10;
  CPI_GUARD_EXT = 11;
  PERMANENT_DELEGATE_EXT = 12;
  NON_TRANSFERABLE_ACCOUNT_EXT = 13;
  TRANSFER_HOOK_EXT = 14;
  TRANSFER_HOOK_ACCOUNT_EXT = 15;
  CONFIDENTIAL_TRANSFER_FEE_CONFIG_EXT = 16;
  CONFIDENTIAL_TRANSFER_FEE_AMOUNT_EXT = 17;
  METADATA_POINTER_EXT = 18;
  TOKEN_METADATA_EXT = 19;
  GROUP_POINTER_EXT = 20;
  TOKEN_GROUP_EXT = 21;
  GROUP_MEMBER_POINTER_EXT = 22;
  TOKEN_GROUP_MEMBER_EXT = 23;
}
message ReallocateArgs { repeated ExtensionType extension_types = 1; }
message Reallocate {
  ReallocateAccounts accounts = 1;
  ReallocateArgs args = 2;
}

message InitializeNonTransferableMintAccounts { string mint = 1; }
message InitializeNonTransferableMint {
  InitializeNonTransferableMintAccounts accounts = 1;
}

message InitializeMintCloseAuthorityAccounts { string mint = 1; }
message InitializeMintCloseAuthorityArgs {
  optional string close_authority = 1;
}
message InitializeMintCloseAuthority {
  InitializeMintCloseAuthorityAccounts accounts = 1;
  InitializeMintCloseAuthorityArgs args = 2;
}

message CreateNativeMintAccounts {
  string mint = 1;
  string payer = 2;
}
message CreateNativeMint { CreateNativeMintAccounts accounts = 1; }

// ---------------------
// Token Extension State
// ---------------------

message ProgramState {
  oneof state {
    ExtendedTokenAccount extended_token_account = 1;
    ExtendedMint extended_mint = 2;
    vixen.parser.token.Multisig multisig = 3;
  }
}

// ----------------------------
// Token Extension Instructions
// ----------------------------

message ProgramInstruction {
  oneof instruction {
    vixen.parser.token.TokenProgramInstruction token_program = 1;
    TransferFeeInstruction transfer_fee = 2;
    TokenMetadataInstruction token_metadata = 3;
    TokenGroupInstruction token_group = 4;
    ConfidentialTransferInstruction confidential_transfer = 5;
    ConfidentialTransferFeeInstruction confidential_transfer_fee = 6;
    CpiGuard cpi_guard = 7;
    TransferHook transfer_hook = 8;
    MetadataPointer metadata_pointer = 9;
    MemoTransfer memo_transfer = 10;
    InterestBearingMint interest_bearing_mint = 11;
    DefaultAccountState default_account_state = 12;
    GroupMemberPointer group_member_pointer = 13;
    GroupPointer group_pointer = 14;
    WithdrawExcessLamports withdraw_excess_lamports = 15;
    InitializePermanentDelegate initialize_permanent_delegate = 16;
    Reallocate reallocate = 17;
    InitializeNonTransferableMint initialize_non_transferable_mint = 18;
    InitializeMintCloseAuthority initialize_mint_close_authority = 19;
    CreateNativeMint create_native_mint = 20;
    vixen.parser.token.SetAuthority set_authority = 21;
  }
}

// ----------------------
// Token Extension Types
// ----------------------

message ImmutableOwner {}

message TransferFeeAmount { uint64 withheld_amount = 1; }

message ConfidentialTransferAccount {
  bool approved = 1;
  string elgamal_pubkey = 2;
  string pending_balance_lo = 3;
  string pending_balance_hi = 4;
  string pending_balance = 5;
  string available_balance = 6;
  string decryptable_available_balance = 7;
  bool allow_confidential_credits = 8;
  uint64 pending_balance_credit_counter = 9;
  uint64 maximum_pending_balance_credit_counter = 10;
  uint64 expected_pending_balance_credit_counter = 11;
  uint64 actual_pending_balance_credit_counter = 12;
}

message MemoTransfer { bool require_incoming_transfer_memos = 1; }

message NonTransferableAccount {}

message TransferHookAccount { bool transferring = 1; }

message CpiGuard { bool lock_cpi = 1; }

message ConfidentialTransferFeeAmount { string withheld_amount = 1; }

message TransferFee {
  uint64 epoch = 1;
  uint64 maximum_fee = 2;
  uint16 transfer_fee_basis_points = 3;
}

message TransferFeeConfig {
  string transfer_fee_config_authority = 1;
  string withdraw_withheld_authority = 2;
  uint64 withheld_amount = 3;
  TransferFee older_transfer_fee = 4;
  TransferFee newer_transfer_fee = 5;
}

message MintCloseAuthority { string close_authority = 1; }

message ConfidentialTransferMint {
  string authority = 1;
  bool auto_approve_new_accounts = 2;
  optional string auditor_elgamal_pubkey = 3;
}

message DefaultAccountState { uint8 state = 1; }

message NonTransferable {}

message InterestBearingConfig {
  string rate_authority = 1;
  int64 initialization_timestamp = 2;
  int64 pre_update_average_rate = 3;
  int64 last_update_timestamp = 4;
  int64 current_rate = 5;
}

message PermanentDelegate { string delegate = 1; }

message TransferHook {
  string authority = 1;
  string program_id = 2;
}

message ConfidentialTransferFeeConfig {
  string authority = 1;
  string withdraw_withheld_authority_elgamal_pubkey = 2;
  bool harvest_to_mint_enabled = 3;
  string withheld_amount = 4;
}

message MetadataPointer {
  string authority = 1;
  string metadata_address = 2;
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}

message TokenMetadata {
  string update_authority = 1;
  string mint = 2;
  string name = 3;
  string symbol = 4;
  string uri = 5;
  repeated KeyValuePair additional_metadata = 6;
}

message GroupPointer {
  string authority = 1;
  string group_address = 2;
}

message TokenGroup {
  string update_authority = 1;
  string mint = 2;
  uint64 size = 3;
  uint64 max_size = 4;
}

message GroupMemberPointer {
  string authority = 1;
  string member_address = 2;
}

message TokenGroupMember {
  string mint = 1;
  string group = 2;
  uint64 member_number = 3;
}

message ConfidentialMintBurn {
  string confidential_supply = 1;
  string decryptable_supply = 2;
  string supply_elgamal_pubkey = 3;
  string pending_burn = 4;
}

message ScaledUiAmountConfig {
  optional string authority = 1;
  double multiplier = 2;
  int64 new_multiplier_effective_timestamp = 3;
  double new_multiplier = 4;
}

message PausableConfig {
  optional string authority = 1;
  bool paused = 2;
}

message PausableAccount {}

message ExtensionData {
  oneof data {
    ImmutableOwner immutable_owner = 1;
    TransferFeeAmount transfer_fee_amount = 2;
    ConfidentialTransferAccount confidential_transfer_account = 3;
    MemoTransfer memo_transfer = 4;
    NonTransferableAccount non_transferable_account = 5;
    TransferHookAccount transfer_hook_account = 6;
    CpiGuard cpi_guard = 7;
    ConfidentialTransferFeeAmount confidential_transfer_fee_amount = 8;
    TransferFeeConfig transfer_fee_config = 9;
    MintCloseAuthority mint_close_authority = 10;
    ConfidentialTransferMint confidential_transfer_mint = 11;
    DefaultAccountState default_account_state = 12;
    NonTransferable non_transferable = 13;
    InterestBearingConfig interest_bearing_config = 14;
    PermanentDelegate permanent_delegate = 15;
    TransferHook transfer_hook = 16;
    ConfidentialTransferFeeConfig confidential_transfer_fee_config = 17;
    MetadataPointer metadata_pointer = 18;
    TokenMetadata token_metadata = 19;
    GroupPointer group_pointer = 20;
    TokenGroup token_group = 21;
    GroupMemberPointer group_member_pointer = 22;
    TokenGroupMember token_group_member = 23;
    ConfidentialMintBurn confidential_mint_burn = 24;
    ScaledUiAmountConfig scaled_ui_amount_config = 25;
    PausableConfig pausable_config = 26;
    PausableAccount pausable_account = 27;
  }
}

message ExtendedTokenAccount {
  vixen.parser.token.TokenAccount base_account = 1;
  repeated ExtensionData extension_data = 2;
}
message ExtendedMint {
  vixen.parser.token.Mint base_mint = 1;
  repeated ExtensionData extension_data = 2;
}
