// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/accounts.proto


export interface ConfidentialTransferFeeConfigProto {
  'authority'?: (string);
  'withdrawWithheldAuthorityElgamalPubkey'?: (string);
  'harvestToMintEnabled'?: (boolean);
  'withheldAmount'?: (string);
}

export interface ConfidentialTransferFeeConfigProto__Output {
  'authority': (string);
  'withdrawWithheldAuthorityElgamalPubkey': (string);
  'harvestToMintEnabled': (boolean);
  'withheldAmount': (string);
}
